--- a/android-app/index.html
+++ b/android-app/index.html
@@ -1,5 +1,13 @@
 <html>
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-89FYNCEFCQ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+    
+            gtag('config', 'G-89FYNCEFCQ');
+        </script>
         <meta charset="utf-8">
         <title>Android App</title>
         <link rel="stylesheet" type="text/css" href="./style.css" />
