--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-89FYNCEFCQ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-89FYNCEFCQ');
+        </script>
         <link rel="shortcut icon" type="image/x-icon" href="./img/main-ico.ico">
         <meta charset="utf-8">
         <title>Nabil Salama Projects</title>
