--- a/newspaper/404.html
+++ b/newspaper/404.html
@@ -1,5 +1,13 @@
 <html lang="de" xml:lang="de" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-89FYNCEFCQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-89FYNCEFCQ');
+    </script>
     <meta name="keywords" content="Glocke, Archiv, Schülerzeitung, Friedrich-Ebert-Gymnasium">
     <meta name="author" content="Nabil Salama, Agit Akgümüs">
     <meta name="date" content="2019-10-22">
