--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-
             gtag('config', 'G-89FYNCEFCQ');
         </script>
         <link rel="shortcut icon" type="image/x-icon" href="./img/main-ico.ico">
@@ -20,6 +19,7 @@
     </head>
     <body>
         <h1>Projects by Nabil Salama</h1>
+        <p id='latest_paper'>latest paper: <a href="https://arxiv.org/abs/2311.13359">arXiv:2311.13359</a></p>
         <div id="tiles"></div>
     </body>
 </html>
